--- a/docs/tutorials/multiple_samples.ipynb
+++ b/docs/tutorials/multiple_samples.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# EnrichMap tutorial for one sample"
+    "# EnrichMap tutorial for multiple samples"
    ]
   },
   {
