multiple_samples.ipynb updated

--- a/docs/tutorials/one_sample.ipynb
+++ b/docs/tutorials/one_sample.ipynb
@@ -239,7 +239,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here\"s the individual gene expression for top three genes."
+    "Here's the individual gene expression for top three genes."
    ]
   },
   {
@@ -310,7 +310,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Moran\"s *I* score shows highly spatial autocorrelation of the `EnrichMap` scores, where high-to-high and low-to-low scores are clustered together with spatial lag of the score, indication spatially coherent scoring."
+    "Moran's *I* score shows highly spatial autocorrelation of the `EnrichMap` scores, where high-to-high and low-to-low scores are clustered together with spatial lag of the score, indication spatially coherent scoring."
    ]
   },
   {
