--- a/docs/tutorials/multiple_samples.ipynb
+++ b/docs/tutorials/multiple_samples.ipynb
@@ -70,12 +70,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "project_dir = os.path.join(os.path.expanduser(\"~\"), \"Cenk_scoring/processed_data/\")\n",
-    "adata = sc.read_h5ad(project_dir + \"adata_slides_0_3.h5ad\")"
+    "# adata = sc.read_h5ad(\"adata_slides_0_3.h5ad\") # commented out for rendering"
    ]
   },
   {
