--- a/docs/tutorials/multiple_samples.ipynb
+++ b/docs/tutorials/multiple_samples.ipynb
@@ -74,7 +74,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# adata = sc.read_h5ad(\"adata_slides_0_3.h5ad\") # commented out for rendering"
+    "# adata = sc.read_h5ad(\"adata_slides_0_3.h5ad\") # commented out for rendering\n",
+    "adata = \"adata\" # Placeholder for the actual AnnData object"
    ]
   },
   {
