--- a/docs/tutorials/multiple_samples.ipynb
+++ b/docs/tutorials/multiple_samples.ipynb
@@ -198,7 +198,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let\"s now investigate what genes influenced the hybrid state the most. Here, we demonstrate top three genes."
+    "Let's now investigate what genes influenced the hybrid state the most. Here, we demonstrate top three genes."
    ]
   },
   {
