--- a/docs/tutorials/one_sample.ipynb
+++ b/docs/tutorials/one_sample.ipynb
@@ -203,7 +203,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let\"s now investigate what genes influenced the `EnrichMap` score the most. Here, we demonstrate top three genes."
+    "Let's now investigate what genes influenced the `EnrichMap` score the most. Here, we demonstrate top three genes."
    ]
   },
   {
