--- a/docs/tutorials/multiple_samples.ipynb
+++ b/docs/tutorials/multiple_samples.ipynb
@@ -75,7 +75,7 @@
    "outputs": [],
    "source": [
     "# adata = sc.read_h5ad(\"adata_slides_0_3.h5ad\") # commented out for rendering\n",
-    "adata = \"adata\" # Placeholder for the actual AnnData object"
+    "adata = sc.datasets.pbmc3k_processed()  # Example dataset, replace with your own"
    ]
   },
   {
