--- a/docs/tutorials/multiple_samples.ipynb
+++ b/docs/tutorials/multiple_samples.ipynb
@@ -74,8 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# adata = sc.read_h5ad(\"adata_slides_0_3.h5ad\") # commented out for rendering\n",
-    "adata = sc.datasets.pbmc3k_processed()  # Example dataset, replace with your own"
+    "adata = sc.read_h5ad(\"tests/dataset/adata_breast.h5ad\")"
    ]
   },
   {
