--- a/docs/tutorials/multiple_samples.ipynb
+++ b/docs/tutorials/multiple_samples.ipynb
@@ -74,7 +74,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata = sc.read_h5ad(\"docs/tutorials/tests/dataset/adata_breast.h5ad\")"
+    "project_dir = os.path.join(os.path.expanduser(\"~\"), \"EnrichMap/\")\n",
+    "adata = sc.read_h5ad(project_dir + \"docs/tutorials/tests/dataset/adata_breast.h5ad\")"
    ]
   },
   {
