--- a/docs/tutorials/multiple_samples.ipynb
+++ b/docs/tutorials/multiple_samples.ipynb
@@ -74,8 +74,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "project_dir = os.path.join(os.path.expanduser(\"~\"), \"EnrichMap/\")\n",
-    "adata = sc.read_h5ad(project_dir + \"docs/tutorials/tests/dataset/adata_breast.h5ad\")"
+    "adata = sc.read_h5ad(\n",
+    "    \"adata_breast.h5ad\",\n",
+    "    backup_url=\"https://github.com/secrierlab/EnrichMap/raw/main/tests/dataset/adata_breast.h5ad\",\n",
+    ")"
    ]
   },
   {
