--- a/docs/tutorials/multiple_samples.ipynb
+++ b/docs/tutorials/multiple_samples.ipynb
@@ -74,7 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata = sc.read_h5ad(\n",
+    "adata = sc.read(\n",
     "    \"adata_breast.h5ad\",\n",
     "    backup_url=\"https://github.com/secrierlab/EnrichMap/raw/main/tests/dataset/adata_breast.h5ad\",\n",
     ")"
