--- a/docs/tutorials/multiple_samples.ipynb
+++ b/docs/tutorials/multiple_samples.ipynb
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
     "em.pl.signature_correlation_heatmap(\n",
     "    adata,\n",
     "    score_keys=[\"Hybrid_score\", \"Mesenchymal_score\", \"Epithelial_score\"],\n",
-    "    batch_key=\"batch\"\n",
+    "    library_key=\"batch\"\n",
     ")"
    ]
   },
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -375,10 +375,7 @@
    ],
    "source": [
     "em.pl.cross_moran_scatter(\n",
-    "    adata,\n",
-    "    score_x=\"Mesenchymal_score\",\n",
-    "    score_y=\"Epithelial_score\",\n",
-    "    batch_key=\"batch\"\n",
+    "    adata, score_x=\"Mesenchymal_score\", score_y=\"Epithelial_score\", library_key=\"batch\"\n",
     ")"
    ]
   }
