cross_moran_scatter() fixed

--- a/docs/tutorials/multiple_samples.ipynb
+++ b/docs/tutorials/multiple_samples.ipynb
@@ -349,6 +349,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Or slide of interest:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "em.pl.signature_correlation_heatmap(\n",
+    "    adata,\n",
+    "    score_keys=[\"Hybrid_score\", \"Mesenchymal_score\", \"Epithelial_score\"],\n",
+    "    library_key=\"batch\",\n",
+    "    library_id=\"3\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Another way to assess if two signatures are correlated, we can plot Cross-Moran plot per slide. Here, we demonstrate how epithelial and mesenchymal programs are reciprocal programs."
    ]
   },
